fixed airline layout issue

--- a/ember/flightpubember/app/styles/app.css
+++ b/ember/flightpubember/app/styles/app.css
@@ -1176,7 +1176,7 @@ a{
 }
 
 .leg-details .airline{
-	width: 50%;
+	width: 80%;
 
 }
 
